adding structure modules section

--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/4hhb.png" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Protein Structure Modules<br />
+								</h2>
+								<p>provide an API that allow to</p>
+								<ul>
+								  <li>Maintain local installations of PDB</li>
+								  <li>Load structures and manipulate them</li>
+								  <li>Perform standard analysis such as sequence and structure alignments<li>
+								  <li>Visualize structures</li>
+								</ul>
+								    
 							</div>
 						</section>
 						<section class="spotlight">
