adding core and tutorial

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: landing
 								<ul>
 								  <li>Maintain local installations of PDB</li>
 								  <li>Load structures and manipulate them</li>
-								  <li>Perform standard analysis such as sequence and structure alignments<li>
+								  <li>Perform standard analysis such as sequence and structure alignments</li>
 								  <li>Visualize structures</li>
 								</ul>
 								    
@@ -48,9 +48,14 @@ layout: landing
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/1d68.png" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>The Core Module<br />
+								</h2>
+								<p>allows to</p>
+								<ul>
+								  <li>Perform basic operations on biological sequences</li>
+								  <li>Read and Write popular sequence file formats</li>
+								  <li>Translate DNA sequences into protein sequences</li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -72,8 +77,8 @@ layout: landing
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Tutorial</h3>
+									<p>The <a href="https://github.com/biojava/biojava-tutorial">tutorial</a> offers an introduction into some of the features that are provided by BioJava.</p>
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Ac Augue Eget</h3>
