--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@ layout: landing
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
+								<li class="icon fa-fa-graduation-cap">
 									<h3>Tutorial</h3>
 									<p>The <a href="https://github.com/biojava/biojava-tutorial">tutorial</a> offers an introduction into some of the features that are provided by BioJava.</p>
 								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-rocket">
+									<h3>Cookbook</h3>
+									<p>The Cookbook provides simple coding recipes that follow a "How do I ..." approach.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Mus Scelerisque</h3>
