--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: landing
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-fa-graduation-cap">
+								<li class="icon fa-graduation-cap">
 									<h3>Tutorial</h3>
 									<p>The <a href="https://github.com/biojava/biojava-tutorial">tutorial</a> offers an introduction into some of the features that are provided by BioJava.</p>
 								</li>
