--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>BioJava is open source<br />
+								eget augue amet aliquet nisl cep donec </h2>
+								<p>It's hosted, developed, and maintained on GitHub.<br/>
+								  <li>
+								    <a href="https://github.org/biojava/biojava" class="button big">View the GitHub project</a>
+								    </li>
+								</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Current release: {{ site.release.version }}</span></span></li>
@@ -48,9 +51,9 @@ layout: landing
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/1d68.png" alt="" /></div><div class="content">
-								<h2>The Core Module<br />
+								<h2>Biological Sequences<br />
 								</h2>
-								<p>allows to</p>
+								<p>BioJava allows to</p>
 								<ul>
 								  <li>Perform basic operations on biological sequences</li>
 								  <li>Read and Write popular sequence file formats</li>
