--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ layout: landing
 								<h2>BioJava is open source<br />
 								</h2>
 								<p>It's hosted, developed, and maintained on GitHub.<br/>
-								    <a href="https://github.org/biojava/biojava" class="button big">View the GitHub project</a>
-								</p>
+								  </p>
+								    <a href="https://github.com/biojava/biojava" class="button big">View the GitHub project</a>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Current release: {{ site.release.version }}</span></span></li>
