--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ layout: landing
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/1ihm.png" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Please cite<br />
+								</h2>
+								<p>
+								  {% include citation.md %}
+								</p>
 							</div>
 						</section>
 					</section>
